tools/tests/errors/missing_indented_block.ki
if 1 < 2:
var x = 1
